...
            "state": "translated",
            "value": "మీరు ఉపయోగించే మందు కోసం రూపొందించబడింది."
          }
        }
      }
    },
    "Cancel": {
      "localizations": {
        "hi": {
          "stringUnit": {
            "state": "translated",
            "value": "रद्द करें"
          }
...
            "state": "translated",
            "value": "ప్రస్తుత"
          }
        }
      }
    },
    "Current dose": {
      "localizations": {
        "hi": {
          "stringUnit": {
            "state": "translated",
            "value": "वर्तमान खुराक"
          }
...
            "state": "translated",
            "value": "మీ మొదటి లాగ్‌కు ముందు జాబ్స్ మీకు మార్గనిర్దేశం చేయగలగాలి కాబట్టి మీ వారపు జాబ్‌ని ప్లాన్ చేయండి."
          }
        }
      }
    },
    "Planned Dose": {
      "localizations": {
        "hi": {
          "stringUnit": {
            "state": "translated",
            "value": "नियोजित खुराक"
          }
...
            "state": "translated",
            "value": "అదే రోజున"
          }
        }
      }
    },
    "Save": {
      "localizations": {
        "hi": {
          "stringUnit": {
            "state": "translated",
            "value": "सहेजें"
          }
...
            "state": "translated",
            "value": "స్వయంగా నివేదించారు. వైద్య సలహా కాదు మరియు డయాగ్నస్టిక్ రికార్డ్ కాదు. గణనలు, తీవ్రతలు మరియు గమనికలు రోగిచే నమోదు చేయబడతాయి; ఇంజెక్షన్ రికార్డ్ నుండి మోతాదు చరిత్ర స్వీయ-లాగ్ చేయబడింది."
          }
        }
      }
    },
    "Semaglutide": {
      "localizations": {
        "hi": {
          "stringUnit": {
            "state": "translated",
            "value": "सेमाग्लूटाइड"
          }
...
